ingress/ingress.yml
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld-rules
spec:
  rules:
  - host: aditya.blog.com
    http:
      paths:
      - path: /
        backend:
          serviceName: blog-full-svc
          servicePort: 8000
  - host: webserver.com
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-service-nodeport
          servicePort: 8888
